vpcnginxec2rev/security_group.tf
resource "aws_security_group" "my-ec2-sg" {
  name        = "my-ec2-sg"
  description = "Allow HTTP and SSH"
  vpc_id = aws_vpc.myvpc.id

  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allow HTTP from anywhere
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Allow SSH from anywhere (make sure to secure SSH access)
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
